@@ -3,3 +3,9 @@ alter table resources add last_available_upto integer NOT NULL default '0';
 delete from schema;
 alter table schema add name VARCHAR( 255 ) NOT NULL;
 INSERT INTO schema(version, name) VALUES ('2.4.0', 'Thriller');
+CREATE TABLE scheduler (
+  name VARCHAR(100) NOT NULL,
+  script VARCHAR(100) NOT NULL,
+  description VARCHAR(255) NOT NULL,
+  PRIMARY KEY (name)
+);
