@@ -49,6 +49,7 @@ version 2.4.0:
   - added a --signal option to oardel that allow a user to send a signal to one of
     his jobs
   - added a name field in the schema table that will refer to the OAR version name
+  - added a table containing scheduler name, script and description
 
 
 version 2.3.4:
